# cleansolve-studio

./: .gitignore  ASSUMPTIONS.md  DECISIONS.md  README.md  SoT.md  pyproject.toml  pytest.ini
apps/api/: .env.example
apps/api/cleansolve_api/: artifacts.py  background.py  live_progress.py  main.py  settings.py  spec_patch.py
apps/api/tests/: test_background.py  test_image_upload_api.py  test_jobs_api.py  test_live_progress.py  test_spec_patch.py
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: upload-review.spec.ts
apps/web/src/: main.tsx  styles.css
apps/web/src/app/: App.tsx  (+2 more)
assets/style-presets/default_pretty_handwriting/: preset.json  renderer_calibration.v1.json
docs/architecture/: ai-review-correction-workflow.md  repository-structure.md
docs/hitl/: ux-policy.md
docs/product/: handwriting-style-reference-set.md  mvp-release-checklist.md  mvp-roadmap.md
docs/superpowers/plans/: 2026-06-14-cleansolve-studio-scaffold.md  2026-06-14-image-ingestion-artifacts.md  2026-06-15-mvp-dataset-preparation.md  2026-06-16-candidate-spec-pipeline.md  2026-06-16-renderer-coverage-expansion.md  2026-06-16-web-upload-review-flow.md  2026-06-17-export-foundation.md  2026-06-17-spec-patch-rerender.md  (+9 more)
docs/workflow/: initial-workflow.md
tools/datasets/: local_match_dataset.py
tools/style_lab/: README.md  __init__.py  cli.py  contact_sheet.py  image_metrics.py  manifest.py  models.py  reference_set.py  style_profile_extractor.py  style_profile_prompt.py  style_profile_schema.py  tokens.py
(+50 files in other folders)
